[package]
name = "hex-spiral"
version = "0.1.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2021"
description = "A single-coordinate concentric 2D hex grid."
license = "MIT"
repository = "https://github.com/ljedrz/hex-spiral"
documentation = "https://docs.rs/hex-spiral"
categories = ["game-development", "visualization"]
keywords = ["coordinate", "game", "hex", "hexagonal"]

[dependencies]
crepe = "0.1"
itertools = "0.10"
